ffi/java/bls_impl.hpp

void init(int curveType) throw(std::exception)
{
	int ret = blsInit(curveType, MCLBN_COMPILED_TIME_VAR);
	if (ret) {
		throw std::runtime_error("bad curveType");
	}
}
class SecretKey;
class PublicKey;
class Signature;
inline void SecretKey::setHashOf(const char *cbuf, size_t bufSize) throw(std::exception)
{
	int r = blsHashToSecretKey(&self_, cbuf, bufSize);
	if (r != 0) {
		throw std::runtime_error("blsHashToSecretKey");
	}
}
inline void Signature::setHashOf(const char *cbuf, size_t bufSize) throw(std::exception)
{
	int r = blsHashToSignature(&self_, cbuf, bufSize);
	if (r != 0) {
		throw std::runtime_error("blsHashToSignature");
	}
}