ffi/cs/bls.cs


        public static void Init(int curveType = BN254)
		{
			if (!System.Environment.Is64BitProcess) {
				throw new PlatformNotSupportedException("not 64-bit system");
			}
			int err = blsInit(curveType, COMPILED_TIME_VAR);
			if (err != 0) {
				throw new ArgumentException("blsInit");
			}
		}
        [StructLayout(LayoutKind.Sequential)]
        public unsafe struct Id {
            private fixed ulong v[ID_UNIT_SIZE];
			public bool IsEqual(in Id rhs)
			{
                return blsIdIsEqual(this, rhs) != 0;
            }
			public void SetDecStr(in String s)
			{
				if (blsIdSetDecStr(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsIdSetDecSt:" + s);
				}
			}
			public void SetHexStr(in String s)
			{
				if (blsIdSetHexStr(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsIdSetHexStr:" + s);
				}
			}
			public void SetInt(int x)
			{
				blsIdSetInt(ref this, x);
			}
			public string GetDecStr()
			{
				StringBuilder sb = new StringBuilder(1024);
				ulong size = blsIdGetDecStr(sb, (ulong)sb.Capacity, this);
				if (size == 0) {
					throw new ArgumentException("blsIdGetDecStr");
				}
				return sb.ToString(0, (int)size);
			}
			public string GetHexStr()
			{
				StringBuilder sb = new StringBuilder(1024);
				ulong size = blsIdGetHexStr(sb, (ulong)sb.Capacity, this);
				if (size == 0) {
					throw new ArgumentException("blsIdGetHexStr");
				}
				return sb.ToString(0, (int)size);
			}
		}
        [StructLayout(LayoutKind.Sequential)]
        public unsafe struct SecretKey {
            private fixed ulong v[SECRETKEY_UNIT_SIZE];
			public bool IsEqual(in SecretKey rhs)
			{
				return blsSecretKeyIsEqual(this, rhs) != 0;
			}
			public void SetHexStr(in String s)
			{
				if (blsSecretKeySetHexStr(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsSecretKeySetHexStr:" + s);
				}
			}
			public string GetHexStr()
			{
				StringBuilder sb = new StringBuilder(1024);
				ulong size = blsSecretKeyGetHexStr(sb, (ulong)sb.Capacity, this);
				if (size == 0) {
					throw new ArgumentException("mclBnFr_getStr");
				}
				return sb.ToString(0, (int)size);
			}
			public void Add(in SecretKey rhs)
			{
				blsSecretKeyAdd(ref this, rhs);
			}
			public void SetByCSPRNG()
			{
				blsSecretKeySetByCSPRNG(ref this);
			}
			public void SetHashOf(in string s)
			{
				if (blsHashToSecretKey(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsHashToSecretKey");
				}
			}
            public PublicKey GetPublicKey()
			{
				PublicKey pub = new PublicKey();
				blsGetPublicKey(ref pub, this);
				return pub;
			}
			public Signature Signature(String m)
			{
				Signature Signature = new Signature();
				blsSign(ref Signature, this, m, (ulong)m.Length);
				return Signature;
			}
        }
		// secretKey = sum_{i=0}^{msk.Length - 1} msk[i] * id^i
		public static SecretKey ShareSecretKey(in SecretKey[] msk, in Id id)
		{
			SecretKey sec = new SecretKey();
			if (blsSecretKeyShare(ref sec, msk[0], (ulong)msk.Length, id) != 0) {
				throw new ArgumentException("GetSecretKeyForId:" + id.ToString());
			}
			return sec;
		}
		public static SecretKey RecoverSecretKey(in SecretKey[] secs, in Id[] ids)
		{
			SecretKey sec = new SecretKey();
			if (blsSecretKeyRecover(ref sec, secs[0], ids[0], (ulong)secs.Length) != 0) {
				throw new ArgumentException("Recover");
			}
			return sec;
		}
        [StructLayout(LayoutKind.Sequential)]
        public unsafe struct PublicKey {
            private fixed ulong v[PUBLICKEY_UNIT_SIZE];
            public bool IsEqual(in PublicKey rhs)
			{
				return blsPublicKeyIsEqual(this, rhs) != 0;
			}
			public void SetStr(in String s)
			{
				if (blsPublicKeySetHexStr(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsPublicKeySetStr:" + s);
				}
			}
			public string GetHexStr()
			{
				StringBuilder sb = new StringBuilder(1024);
				ulong size = blsPublicKeyGetHexStr(sb, (ulong)sb.Capacity, this);
				if (size == 0) {
					throw new ArgumentException("blsPublicKeyGetStr");
				}
				return sb.ToString(0, (int)size);
			}
			public void Add(in PublicKey rhs)
			{
				blsPublicKeyAdd(ref this, rhs);
			}
			public bool Verify(in Signature sig, in string m)
			{
				return blsVerify(sig, this, m, (ulong)m.Length) == 1;
			}
		}
		// publicKey = sum_{i=0}^{mpk.Length - 1} mpk[i] * id^i
		public static PublicKey SharePublicKey(in PublicKey[] mpk, in Id id)
		{
			PublicKey pub = new PublicKey();
			if (blsPublicKeyShare(ref pub, mpk[0], (ulong)mpk.Length, id) != 0) {
				throw new ArgumentException("GetPublicKeyForId:" + id.ToString());
			}
			return pub;
		}
		public static PublicKey RecoverPublicKey(in PublicKey[] pubs, in Id[] ids)
		{
			PublicKey pub = new PublicKey();
			if (blsPublicKeyRecover(ref pub, pubs[0], ids[0], (ulong)pubs.Length) != 0) {
				throw new ArgumentException("Recover");
			}
			return pub;
		}
        [StructLayout(LayoutKind.Sequential)]
        public unsafe struct Signature {
            private fixed ulong v[SIGNATURE_UNIT_SIZE];
            public bool IsEqual(in Signature rhs)
			{
				return blsSignatureIsEqual(this, rhs) != 0;
			}
			public void SetStr(in String s)
			{
				if (blsSignatureSetHexStr(ref this, s, (ulong)s.Length) != 0) {
					throw new ArgumentException("blsSignatureSetStr:" + s);
				}
			}
			public string GetHexStr()
			{
				StringBuilder sb = new StringBuilder(1024);
				ulong size = blsSignatureGetHexStr(sb, (ulong)sb.Capacity, this);
				if (size == 0) {
					throw new ArgumentException("blsSignatureGetStr");
				}
				return sb.ToString(0, (int)size);
			}
			public void Add(in Signature rhs)
			{
				blsSignatureAdd(ref this, rhs);
			}
		}
        public static Signature RecoverSign(in Signature[] signs, in Id[] ids)
		{
			Signature Signature = new Signature();
			if (blsSignatureRecover(ref Signature, signs[0], ids[0], (ulong)signs.Length) != 0) {
				throw new ArgumentException("Recover");
			}
			return Signature;
		}
    }
}
